autocomplete styles edited

--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -191,7 +191,7 @@
                             </p:column>
 
                             <p:column>
-                                <strong>#{coinTemp.name}</strong> - #{coinTemp.symbol}
+                                #{coinTemp.name} <span style="margin-right: 10px; float: right">#{coinTemp.symbol}</span>
                             </p:column>
 
                             <p:ajax event="itemSelect" update="watch-add-coin-done watch-add-coin-currency"/>
