refactoring p:autocomlete and watchlistBacking using more primefaces functionality

--- a/crypfolio/web/faces/forgot-password.xhtml
+++ b/crypfolio/web/faces/forgot-password.xhtml
@@ -37,7 +37,7 @@
 
                         </p:outputPanel>
 
-                        <p:outputLabel style="height: 10px; display: block;"/>
+                        <h:outputText styleClass="span-10px-height"/>
 
                         <p:commandButton action="#{forgotPasswordBacking.sendRequestResetPassword}"
                                          value="Send"
@@ -89,7 +89,7 @@
 
                         </p:outputPanel>
 
-                        <p:outputLabel style="height: 10px; display: block;"/>
+                        <h:outputText styleClass="span-10px-height"/>
 
                         <p:commandButton action="#{forgotPasswordBacking.sendSaveNewPassword(code)}"
                                          value="Submit"
