--- a/crypfolio/web/faces/login.xhtml
+++ b/crypfolio/web/faces/login.xhtml
@@ -49,7 +49,7 @@
 
                             <h:link outcome="forgot-password" styleClass="upp-case" value="Reset password"/>
 
-                            <p:outputLabel style="height: 10px; display: block;"/>
+                            <h:outputText styleClass="span-10px-height"/>
 
                             <p:commandButton action="#{loginBacking.login}"
                                              value="Login"
