--- a/crypfolio/web/faces/signup.xhtml
+++ b/crypfolio/web/faces/signup.xhtml
@@ -77,8 +77,7 @@
 
                             </p:outputPanel>
 
-
-                            <p:outputLabel style="height: 10px; display: block;"/>
+                            <h:outputText styleClass="span-10px-height"/>
 
                             <p:commandButton action="#{signupBacking.signup}"
                                              value="Sign Up"
